--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZwV2xLz1R4pLfbYU6WgjM",
+      "authorship_tag": "ABX9TyPpNfCwJEquzELbL0DHx+8S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,6 +65,80 @@
         "print(\"Area of Cylinder:\", area, \"sq. ft\")\n",
         "type(area)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1 = float(input(\"Please enter number 1: \"))\n",
+        "n2 = float(input(\"Please enter number 2: \"))\n",
+        "op = input(\"Please enter the operation: \")\n",
+        "\n",
+        "if op == \"+\":\n",
+        "  print(n1 + n2)\n",
+        "elif op == \"-\":\n",
+        "  print(n1 - n2)\n",
+        "elif op == \"*\":\n",
+        "  print(n1 * n2)\n",
+        "elif op == \"/\":\n",
+        "  print(n1 / n2)\n",
+        "elif op == \"//\":\n",
+        "  print(n1 // n2)\n",
+        "elif op == \"**\":\n",
+        "  print(n1 ** n2)\n",
+        "elif op == \"%\":\n",
+        "  print(n1 % n2)\n",
+        "else:\n",
+        "  print(\"Invalid operation\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B0sp5efs6NOO",
+        "outputId": "a8cb67e2-0239-49c2-8dc7-d7ff6ea2ecfa"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter number 1: 1\n",
+            "Please enter number 2: 1\n",
+            "Please enter the operation: +\n",
+            "2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "if x % 2 == 0:\n",
+        "  res = 'Even'\n",
+        "else:\n",
+        "  res = 'Odd'\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "id": "z1svg2nDAD-_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "res = 'Even' if x % 2 == 0 else 'Odd'\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "id": "GjVCp7B_AF8J"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
