--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpNfCwJEquzELbL0DHx+8S",
+      "authorship_tag": "ABX9TyPLxIwQbKnytZuTHfbUrthS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
         "id": "B0sp5efs6NOO",
         "outputId": "a8cb67e2-0239-49c2-8dc7-d7ff6ea2ecfa"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,6 +139,81 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for numberHours in range(1, 9):\n",
+        "  fee = 5 + 2.5 * numberHours\n",
+        "  if fee < 10:\n",
+        "    fee = 10\n",
+        "  elif fee > 20:\n",
+        "    fee = 20\n",
+        "  print(numberHours, fee)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mhT6ASudpOwI",
+        "outputId": "6c124ff7-5a89-44db-a904-e6e37b32fbdc"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20\n",
+            "8 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "print('ad$\\t', 'Profit')\n",
+        "for adMoney in range(0, 201, 25):\n",
+        "  revenue = (20 + 2 * round(math.sqrt(adMoney))) * 10\n",
+        "  cost = 200 + adMoney\n",
+        "  profit = revenue - cost\n",
+        "  print(adMoney, \"\\t\", profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xyGWX5gGq9AE",
+        "outputId": "93d04f04-7056-4448-a37b-c2c331b725c8"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ad$\t Profit\n",
+            "0 \t 0\n",
+            "25 \t 75\n",
+            "50 \t 90\n",
+            "75 \t 105\n",
+            "100 \t 100\n",
+            "125 \t 95\n",
+            "150 \t 90\n",
+            "175 \t 85\n",
+            "200 \t 80\n"
+          ]
+        }
+      ]
     }
   ]
 }
