--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLxIwQbKnytZuTHfbUrthS",
+      "authorship_tag": "ABX9TyPNbEcEarOvnWKrlp7EfyDv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,7 +158,7 @@
         "id": "mhT6ASudpOwI",
         "outputId": "6c124ff7-5a89-44db-a904-e6e37b32fbdc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "id": "xyGWX5gGq9AE",
         "outputId": "93d04f04-7056-4448-a37b-c2c331b725c8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,6 +211,52 @@
             "150 \t 90\n",
             "175 \t 85\n",
             "200 \t 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "play = (input(\"Would you like to play the game(Yes or No): \"))\n",
+        "while play == \"Yes\" or play == \"yes\":\n",
+        "  print(\"Let's Play!\")\n",
+        "  PlayerOne = input(\"Player One, Please enter Rock, Paper or Scissors: \")\n",
+        "  PlayerTwo = input(\"Player Two, Please enter Rock, Paper or Scissors: \")\n",
+        "  if PlayerOne == PlayerTwo:\n",
+        "    print(\"Tie!\")\n",
+        "  elif PlayerOne == \"Rock\" and PlayerTwo == \"Scissors\":\n",
+        "    print(\"Player One Wins!\")\n",
+        "  elif PlayerOne == \"Paper\" and PlayerTwo == \"Rock\":\n",
+        "    print(\"Player One Wins!\")\n",
+        "  elif PlayerOne == \"Scissors\" and PlayerTwo == \"Paper\":\n",
+        "    print(\"Player One Wins!\")\n",
+        "  else:\n",
+        "    print(\"Player Two Wins!\")\n",
+        "\n",
+        "  play = input(\"Would you like to play again(Yes or No): \")\n",
+        "print('Have a good day!')"
+      ],
+      "metadata": {
+        "id": "k-wgLsUN-SNt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24698f40-29ef-465c-fb09-0c6d948a1f6a"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Would you like to play the game(Yes or No): yes\n",
+            "Let's Play!\n",
+            "Player One, Please enter Rock, Paper or Scissors: rock\n",
+            "Player Two, Please enter Rock, Paper or Scissors: paper\n",
+            "Player Two Wins!\n",
+            "Would you like to play again(Yes or No): no\n",
+            "Have a good day!\n"
           ]
         }
       ]
