--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNbEcEarOvnWKrlp7EfyDv",
+      "authorship_tag": "ABX9TyPrUx4bLjSYTfh6WYvjaLbb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,20 +244,63 @@
         },
         "outputId": "24698f40-29ef-465c-fb09-0c6d948a1f6a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Would you like to play the game(Yes or No): yes\n",
             "Let's Play!\n",
-            "Player One, Please enter Rock, Paper or Scissors: rock\n",
-            "Player Two, Please enter Rock, Paper or Scissors: paper\n",
-            "Player Two Wins!\n",
-            "Would you like to play again(Yes or No): no\n",
-            "Have a good day!\n"
+            "Player One, Please enter Rock, Paper or Scissors: rock\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = []\n",
+        "\n",
+        "num = float(input(\"Please enter a number: \"))\n",
+        "\n",
+        "while num != 0.0:\n",
+        "  lst.append(num)\n",
+        "  num = float(input(\"Please enter a number: \"))\n",
+        "lst.sort(reverse=True)\n",
+        "lst"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uq4VepEAdJLY",
+        "outputId": "88e8d30d-87a2-4a82-cb8e-afc3badc4569"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please enter a number: 5.674\n",
+            "Please enter a number: 4.670\n",
+            "Please enter a number: 3.4225\n",
+            "Please enter a number: 2545.5\n",
+            "Please enter a number: 2346.56543\n",
+            "Please enter a number: 46745.5656\n",
+            "Please enter a number: 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[46745.5656, 2545.5, 2346.56543, 5.674, 4.67, 3.4225]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     }
