--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrUx4bLjSYTfh6WYvjaLbb",
+      "authorship_tag": "ABX9TyP7x9tUArxK1HaivsCKABQn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -277,7 +277,7 @@
         "id": "Uq4VepEAdJLY",
         "outputId": "88e8d30d-87a2-4a82-cb8e-afc3badc4569"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -303,6 +303,69 @@
           "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+        "\n",
+        "for idx in range(len(names)):\n",
+        "  months[numbers[idx]] = names[idx]\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VLkpHu2DNVqr",
+        "outputId": "77a2cba4-a250-4271-d648-4ebf42fe8b98"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "counts = {}\n",
+        "while len(counts) < 5:\n",
+        "  key = input(\"Please enter value: \")\n",
+        "\n",
+        "if key not in counts:\n",
+        "  counts[key] = 1\n",
+        "else:\n",
+        "  counts[key] += 1\n",
+        "counts"
+      ],
+      "metadata": {
+        "id": "V88jUgTpN0JH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
