--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjy85Igbl/PvNhoG92oCpI",
+      "authorship_tag": "ABX9TyNjxysYttGyxnqmwIeRKBRx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -364,13 +364,13 @@
       ],
       "metadata": {
         "id": "V88jUgTpN0JH",
-        "outputId": "87c192ca-8f3a-4c0e-ce4f-d1659b9f5182",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        }
+        },
+        "outputId": "87c192ca-8f3a-4c0e-ce4f-d1659b9f5182"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -402,16 +402,17 @@
         "  numHours = int(input('Enter number of hours: '))\n",
         "  calcFee(numHours)\n",
         "\n",
-        "main()"
+        "if __name__ == '__main__':\n",
+        "  main()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mDrJhO6f1BKz",
-        "outputId": "01d35235-8943-4119-8ba2-87b2ae65fac9"
+        "outputId": "c04496e6-7692-4143-fa9a-af247a207ca1"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,13 +436,13 @@
       ],
       "metadata": {
         "id": "guBVzRtGb6QL",
-        "outputId": "8ff3cc31-6d82-4155-8687-b52c47f23d7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "8ff3cc31-6d82-4155-8687-b52c47f23d7b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,14 +470,14 @@
         "reverse('Hello')"
       ],
       "metadata": {
-        "id": "sXbjherce2F1",
-        "outputId": "a33d2f7c-fb13-4876-ad9c-9ddf07ee71de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "sXbjherce2F1",
+        "outputId": "a33d2f7c-fb13-4876-ad9c-9ddf07ee71de"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,6 +491,91 @@
           },
           "metadata": {},
           "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  fee = 5 + 2.5 * hours\n",
+        "  if fee < 10.0:\n",
+        "    fee = 10.0\n",
+        "  elif fee >= 20.0:\n",
+        "    fee = 20.0\n",
+        "  print(f'Fee: ${fee}')\n",
+        "\n",
+        "def main():\n",
+        "  try:\n",
+        "    numHours = int(input('Enter number of hours: '))\n",
+        "    calcFee(numHours)\n",
+        "  except ValueError:\n",
+        "    print('Cannot be casted as int()')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UsxWKBY1gm_1",
+        "outputId": "edf9fcea-23e9-44f4-8bc8-18e1f11ba805"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number of hours: 5.2\n",
+            "Cannot be casted as int()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def getValues(n):\n",
+        "  L = []\n",
+        "  for i in range(n):\n",
+        "    weight = float(input('Enter weight: '))\n",
+        "    L.append(weight)\n",
+        "  return L\n",
+        "\n",
+        "def calcAverage(alist):\n",
+        "  try:\n",
+        "    print(f'The average weight is {sum(alist[2:]) / len(alist[2:])} lbs.')\n",
+        "  except ZeroDivisionError:\n",
+        "    print('List alist is empty or has a length less than 2')\n",
+        "  except:\n",
+        "    print('Unknown error')\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  try:\n",
+        "    n = int(input('Enter size of list: '))\n",
+        "    alist = getValues(n)\n",
+        "    calcAverage(alist)\n",
+        "  except ValueError:\n",
+        "    print('Cannot be casted as int()')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l3X99ATljgnN",
+        "outputId": "1ecfb659-e7f3-4c11-de81-d101198cc844"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter size of list: 0\n",
+            "List alist is empty or has a length less than 2\n"
+          ]
         }
       ]
     }
