--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjxysYttGyxnqmwIeRKBRx",
+      "authorship_tag": "ABX9TyPoCTtWiUQt8VaNa0/Ymtwc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -412,7 +412,7 @@
         "id": "mDrJhO6f1BKz",
         "outputId": "c04496e6-7692-4143-fa9a-af247a207ca1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,7 +522,7 @@
         "id": "UsxWKBY1gm_1",
         "outputId": "edf9fcea-23e9-44f4-8bc8-18e1f11ba805"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +567,7 @@
         "id": "l3X99ATljgnN",
         "outputId": "1ecfb659-e7f3-4c11-de81-d101198cc844"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,6 +575,38 @@
           "text": [
             "Enter size of list: 0\n",
             "List alist is empty or has a length less than 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Greeting:\n",
+        "  def __init__(self, first, last):\n",
+        "    self.first = first\n",
+        "    self.last = last\n",
+        "\n",
+        "  def display(self):\n",
+        "    print(f'Hi {self.first}')\n",
+        "\n",
+        "greeting = Greeting('Donald', 'Becker')\n",
+        "greeting.display()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hyge-M1bm1e3",
+        "outputId": "66c8e4bd-7bf1-48de-8fe1-557b28fe17de"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi Donald\n"
           ]
         }
       ]
