--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoCTtWiUQt8VaNa0/Ymtwc",
+      "authorship_tag": "ABX9TyNMkD4fXzOfzjuU0XauPBcA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -587,26 +587,34 @@
         "    self.first = first\n",
         "    self.last = last\n",
         "\n",
-        "  def display(self):\n",
-        "    print(f'Hi {self.first}')\n",
+        "  def display(self, formal = False):\n",
+        "    if formal:\n",
+        "      print(f'Hello {self.first} {self.last}')\n",
+        "    else:\n",
+        "      print(f'Hi {self.first}')\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return str(self.first) + \", \" + str(self.last)\n",
         "\n",
         "greeting = Greeting('Donald', 'Becker')\n",
-        "greeting.display()"
+        "greeting.display(formal = True)\n",
+        "print(greeting)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hyge-M1bm1e3",
-        "outputId": "66c8e4bd-7bf1-48de-8fe1-557b28fe17de"
+        "outputId": "0e120bee-554f-45c4-9c5a-5df12c598220"
       },
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hi Donald\n"
+            "Hello Donald Becker\n",
+            "Donald, Becker\n"
           ]
         }
       ]
