--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMkD4fXzOfzjuU0XauPBcA",
+      "authorship_tag": "ABX9TyPIN1FEDP1IszGHFc8u0XRf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,7 +607,7 @@
         "id": "Hyge-M1bm1e3",
         "outputId": "0e120bee-554f-45c4-9c5a-5df12c598220"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,6 +616,171 @@
             "Hello Donald Becker\n",
             "Donald, Becker\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "    self.courses = []\n",
+        "\n",
+        "  def enroll(self, course):\n",
+        "    if course not in self.courses:\n",
+        "      self.courses.append(course)\n",
+        "    else:\n",
+        "        print(f'You have already enrolled in {course}')\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses\n",
+        "\n",
+        "s1 = Student('Bob', 100)\n",
+        "s2 = Student('Alice', 101)\n",
+        "s1.name, s2.name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EkE7kxQrH6EG",
+        "outputId": "cdec5067-a8c1-4c58-85c4-970750d27227"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Bob', 'Alice')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.enroll('BTE320')"
+      ],
+      "metadata": {
+        "id": "ie3waLIvPmOe"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.enroll('BTE422')"
+      ],
+      "metadata": {
+        "id": "k7wbXYsrPuED"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZFpvJ8bXQBFY",
+        "outputId": "969f7af2-3620-4e17-856f-1d3d37cce340"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['BTE320', 'BTE422']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Dummy:\n",
+        "  def __init__(self, a):\n",
+        "    self.a = a\n",
+        "\n",
+        "  def __add__(self, other):\n",
+        "    return self.a + other.a\n",
+        "\n",
+        "  def __mul__(self, other):\n",
+        "    return self.a * other.a\n",
+        "\n",
+        "x = Dummy(3)\n",
+        "y = Dummy(4)"
+      ],
+      "metadata": {
+        "id": "2wgFBHMRRBzg"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x + y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hhGjg2NyRP3k",
+        "outputId": "c323a1ef-ad92-4e9e-dda1-df5d6647fa72"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x * y"
+      ],
+      "metadata": {
+        "id": "vZtqjMg8STkB",
+        "outputId": "32870a7e-f921-4d7e-ea96-1e5497832c62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     }
