--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIN1FEDP1IszGHFc8u0XRf",
+      "authorship_tag": "ABX9TyOXbkAnmX2UNndCosw9vg4P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -648,7 +648,7 @@
         "id": "EkE7kxQrH6EG",
         "outputId": "cdec5067-a8c1-4c58-85c4-970750d27227"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,7 +670,7 @@
       "metadata": {
         "id": "ie3waLIvPmOe"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -681,7 +681,7 @@
       "metadata": {
         "id": "k7wbXYsrPuED"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -696,7 +696,7 @@
         "id": "ZFpvJ8bXQBFY",
         "outputId": "969f7af2-3620-4e17-856f-1d3d37cce340"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,13 +723,16 @@
         "  def __mul__(self, other):\n",
         "    return self.a * other.a\n",
         "\n",
+        "  def __str__(self):\n",
+        "    return str(self.a)\n",
+        "\n",
         "x = Dummy(3)\n",
         "y = Dummy(4)"
       ],
       "metadata": {
         "id": "2wgFBHMRRBzg"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,9 +745,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhGjg2NyRP3k",
-        "outputId": "c323a1ef-ad92-4e9e-dda1-df5d6647fa72"
+        "outputId": "35af3217-5727-463b-da1a-9ac7b1bcae58"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,33 +757,98 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "x * y"
+        "import math\n",
+        "\n",
+        "class Point:\n",
+        "  def __init__(self, x, y):\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "\n",
+        "  def distance(self, other):\n",
+        "    dx = (self.x - other.x) ** 2\n",
+        "    dy = (self.y - other.y) ** 2\n",
+        "    dist = math.sqrt(dx + dy)\n",
+        "    return dist\n",
+        "\n",
+        "p1 = Point(1, 7)\n",
+        "p2 = Point(4, 3)\n",
+        "p1.distance(p2)"
       ],
       "metadata": {
-        "id": "vZtqjMg8STkB",
-        "outputId": "32870a7e-f921-4d7e-ea96-1e5497832c62",
+        "id": "tG_yTOAQsvUT",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bc4005a4-6e42-4b03-ed8c-3cd458f664af"
       },
-      "execution_count": 29,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "12"
+              "5.0"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle:\n",
+        "  def __init__(self):\n",
+        "    self.c1 = Point(0, 0)\n",
+        "    self.c2 = Point(0, 2)\n",
+        "    self.c3 = Point(2, 0)\n",
+        "    self.c4 = Point(0, 2)\n",
+        "    self.width = self.calculate_width()\n",
+        "    self.length = self.calculate_length()\n",
+        "\n",
+        "  def calculate_width(self):\n",
+        "    return self.c1.distance (self.c3)\n",
+        "\n",
+        "  def calculate_length(self):\n",
+        "    return self.c1.distance (self.c2)\n",
+        "\n",
+        "  def area(self):\n",
+        "    return f'Area = {self.width * self.length} sq ft.'\n",
+        "\n",
+        "\n",
+        "square = Rectangle()\n",
+        "square.area()"
+      ],
+      "metadata": {
+        "id": "CAhYVbf6uh3v",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8addb692-eb63-4d77-b475-3cc17ba47fd2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Area = 4.0 sq ft.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
